@@ -1,10 +1,13 @@
 20 Jun 2013: Matthijs
+	- Use IPV6 minimum MTU settings with TCP to reduce failures that
+	  are caused by delays in learning working PMTU when communicating
+	  through a tunnel.
 	- Improved RRL logging: also print triggering query src addr and qtype
 	  (thanks Klaus Darilion).
 
 18 Jun 2013: Matthijs
-        - Add rrl-slip config option (thanks Stephane Bortzmeyer).
-        - Add rrl-ipv{4,6}-prefix-length config option.
+	- Add rrl-slip config option (thanks Stephane Bortzmeyer).
+	- Add rrl-ipv{4,6}-prefix-length config option.
 	- Bug #496: Support for EUI498 and EUI64 RR types.
 
 14 Jun 2013: Wouter
